--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,7 @@ dependencies {
     implementation "org.jetbrains.anko:anko-common:$rootProject.ankoVersion"
     // mapbox
     implementation "com.mapbox.mapboxsdk:mapbox-android-sdk:$rootProject.mapboxVersion"
+    //implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.21.0'
+    //implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.10.0'
+    //implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation:0.22.0'
 }
