--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,13 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.tsystems.r2b.dflow"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary true
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -40,7 +41,7 @@ dependencies {
     implementation "androidx.core:core-ktx:$rootProject.ktxVersion"
     implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.lifecycleVersion"
     implementation "androidx.legacy:legacy-support-v4:$rootProject.supportLibraryVersion"
-    //implementation "androidx.recyclerview:recyclerview:$rootProject.supportLibraryVersion"
+    implementation "androidx.recyclerview:recyclerview:$rootProject.supportLibraryVersion"
     implementation "androidx.room:room-runtime:$rootProject.roomVersion"
     implementation "com.google.android.material:material:$rootProject.supportLibraryVersion"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$rootProject.kotlinVersion"
@@ -52,4 +53,6 @@ dependencies {
     //implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.21.0'
     //implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.10.0'
     //implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation:0.22.0'
+    // picasso
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
