--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,9 +50,9 @@ dependencies {
     implementation "org.jetbrains.anko:anko-common:$rootProject.ankoVersion"
     // mapbox
     implementation "com.mapbox.mapboxsdk:mapbox-android-sdk:$rootProject.mapboxVersion"
-    //implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.21.0'
-    //implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.10.0'
-    //implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation:0.22.0'
+//    implementation 'com.mapbox.mapboxsdk:mapbox-sdk-services:4.0.0'
+//    implementation 'com.mapbox.mapboxsdk:mapbox-sdk-turf:4.0.0'
+//    implementation 'com.mapbox.mapboxsdk:mapbox-sdk-geojson:4.0.0'
     // picasso
     implementation 'com.squareup.picasso:picasso:2.5.2'
 }
