--- a/build.gradle
+++ b/build.gradle
@@ -4,18 +4,16 @@ buildscript {
     ext {
         // Sdk and tools
         compileSdkVersion = 28
-        minSdkVersion = 19
+        minSdkVersion = 21
         targetSdkVersion = 28
 
         // App dependencies
         constraintLayoutVersion = '2.0.0-alpha2'
         coreTestingVersion = '2.0.0'
         espressoVersion = '3.1.0-alpha4'
-        glideVersion = '4.8.0'
         gradleVersion = '3.2.1'
-        gsonVersion = '2.8.2'
         junitVersion = '4.12'
-        kotlinVersion = '1.3.0-rc-190'
+        kotlinVersion = '1.3.0'
         ktlintVersion = '0.29.0'
         ktxVersion = '1.0.0'
         lifecycleVersion = '2.0.0'
@@ -23,10 +21,8 @@ buildscript {
         roomVersion = '2.1.0-alpha01'
         runnerVersion = '1.0.1'
         supportLibraryVersion = '1.0.0'
-        uiAutomatorVersion = '2.2.0-alpha4'
-        workVersion = '1.0.0-alpha10'
         ankoVersion = '0.10.2'
-        mapboxVersion = '6.6.0'
+        mapboxVersion = '6.6.1'
     }
     repositories {
         google()
@@ -35,9 +31,6 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:3.2.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
