--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
         ktlintVersion = '0.29.0'
         ktxVersion = '1.0.0'
         lifecycleVersion = '2.0.0'
-        navigationVersion = '1.0.0-alpha06'
+        navigationVersion = '1.0.0-alpha07'
         roomVersion = '2.1.0-alpha01'
         runnerVersion = '1.0.1'
         supportLibraryVersion = '1.0.0'
@@ -29,8 +29,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:3.2.1"
+        classpath "com.android.tools.build:gradle:$gradleVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
     }
 }
 
