--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     implementation "org.jetbrains.anko:anko-common:$rootProject.ankoVersion"
     // mapbox
     implementation "com.mapbox.mapboxsdk:mapbox-android-sdk:$rootProject.mapboxVersion"
+    implementation 'com.google.android.gms:play-services-base:15.0.1'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
     //implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation:0.22.0'
     //implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.22.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-sdk-services:4.0.0'
