--- a/build.gradle
+++ b/build.gradle
@@ -9,18 +9,22 @@ buildscript {
 
         // App dependencies
         constraintLayoutVersion = '2.0.0-alpha2'
+        coordinatorLayoutVersion = '1.0.0'
         coreTestingVersion = '2.0.0'
         espressoVersion = '3.1.0-alpha4'
         gradleVersion = '3.2.1'
         junitVersion = '4.12'
         kotlinVersion = '1.3.0'
         ktlintVersion = '0.29.0'
-        ktxVersion = '1.0.0'
+        ktxVersion = '1.0.1'
         lifecycleVersion = '2.0.0'
         navigationVersion = '1.0.0-alpha07'
         roomVersion = '2.1.0-alpha02'
         runnerVersion = '1.0.1'
-        supportLibraryVersion = '1.0.0'
+        supportLibraryVersion = '1.0.1'
+        materialLibraryVersion = '1.0.0'
+        legacyLibraryVersion = '1.0.0'
+        recyclerLibraryVersion = '1.0.0'
         ankoVersion = '0.10.2'
         mapboxVersion = '6.6.1'
     }
